# smart-sport-analytics

./: .gitignore  README.md  data_converter.py  data_downloader.py  main.py  pose_estimation.py  pyproject.toml  sam2_analyzer.py  track_players.py  tracking_inference.py  utils.py
