[project]
name = "smart-sport-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.11.0.86",
    "soccernet>=0.1.62",
    "streamlit>=1.49.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.192",
]
